整理了仓库文件结构

--- a/src/physics-notes-style.sty
+++ b/src/physics-notes-style.sty
@@ -8,7 +8,7 @@
 % 基础宏包
 \RequirePackage{xcolor}
 \RequirePackage{amsmath,amsthm,bm}
-\RequirePackage{amssymb,latexsym,textcomp,mathrsfs,euscript,yhmath}
+\RequirePackage{amssymb,latexsym,textcomp,euscript,euscript,yhmath}
 %
 % 物理专用宏包
 \RequirePackage{siunitx}
@@ -66,9 +66,9 @@
 \RequirePackage{hyperref}
 \hypersetup{
     colorlinks=true,
-    linkcolor=blue,
-    citecolor=blue,
-    urlcolor=teal,
+    linkcolor=red,
+    citecolor=red,
+    urlcolor=red,
     bookmarksnumbered=true,
     pdfstartview=FitH
 }
