--- a/src/physics-notes-style.sty
+++ b/src/physics-notes-style.sty
@@ -34,6 +34,7 @@
 \RequirePackage{multicol}
 \RequirePackage{microtype}
 \RequirePackage{tabularray}
+\RequirePackage{scalerel}
 % 
 % 中文支持
 \RequirePackage[UTF8,scheme=chinese, heading=true]{ctex}
