完成了第零章的编写

--- a/src/physics-notes-style.sty
+++ b/src/physics-notes-style.sty
@@ -1,5 +1,6 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{physics-notes-style}
+
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % physics-notes-style 调用的宏包
@@ -12,6 +13,7 @@
 \RequirePackage{derivative,fixdif}
 \RequirePackage{mathtools}
 \RequirePackage{polynom}
+\RequirePackage{esint}
 %
 % 物理专用宏包
 \RequirePackage{siunitx}
