--- a/src/physics-notes-style.sty
+++ b/src/physics-notes-style.sty
@@ -1,10 +1,13 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{physics-notes-style}
-
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % physics-notes-style 调用的宏包
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+% 参考文献支持
+\RequirePackage[backend=biber,style=gb7714-2015, sorting=none,backref=true]{biblatex}
+\addbibresource{references.bib}
 %
 % 基础宏包（数学）
 \RequirePackage{xcolor}
@@ -20,6 +23,7 @@
 \RequirePackage{physics2}
 %
 % 图形和布局
+\PassOptionsToPackage{no-math}{fontspec}
 \RequirePackage{graphicx,float,caption,subcaption}
 \RequirePackage{tikz}
 \usetikzlibrary{arrows.meta,angles,quotes,calc}
@@ -37,29 +41,10 @@
 \RequirePackage{microtype}
 \RequirePackage{tabularray}
 \RequirePackage{scalerel}
-% 
+\RequirePackage{booktabs}
+%
 % 中文支持
-\RequirePackage[UTF8,scheme=chinese, heading=true]{ctex}
-%
-% 页眉页脚设定 (奇偶页显示章节和页码)
-\addtolength{\headheight}{1.6pt}
-\newdimen\headwidth \headwidth\textwidth
-\newdimen\headrulewidth \headrulewidth=0.4pt
-\def\ps@fancy{%
-  \let\@oddfoot\@empty\let\@evenfoot\@empty
-  \def\@evenhead{\vbox to \headheight{%
-    \hb@xt@\headwidth{\bfseries\thepage\hfil\leftmark}%
-    \vss\hrule\@height\headrulewidth}}%
-  \def\@oddhead{\vbox to \headheight{%
-    \hb@xt@\headwidth{\bfseries\rightmark\hfil\thepage}%
-    \vss\hrule\@height\headrulewidth}}%
-  \let\@mkboth\markboth
-  \def\chaptermark##1{\markboth{\if@mainmatter\CTEXthechapter\fi\quad ##1}{}}%
-  \def\sectionmark##1{\markright{\S\thesection\quad ##1}}%
-}
-% 应用页眉样式
-\pagestyle{fancy}
-%
+\RequirePackage[UTF8,scheme=chinese, heading=true,fontset=lxgw]{ctex}
 %
 % tcolorbox 及其库
 \RequirePackage{tcolorbox}
@@ -197,6 +182,28 @@
 }{illustration}
 %
 %==========================================
+%
+% 页眉页脚设定 (利用 fancyhdr 实现)
+\RequirePackage{fancyhdr}
+\addtolength{\headheight}{1.6pt}
+\pagestyle{fancy}
+\fancyhf{} % 清空默认的页眉页脚设置
+%
+% 设定页眉内容
+% 偶数页 (Even)：左页码 (LE)，右章名 (RE)
+\fancyhead[LE]{\bfseries\thepage}
+\fancyhead[RE]{\bfseries\leftmark}
+% 奇数页 (Odd)：左节名 (LO)，右页码 (RO)
+\fancyhead[LO]{\bfseries\rightmark}
+\fancyhead[RO]{\bfseries\thepage}
+%
+% 设定页眉线宽
+\renewcommand{\headrulewidth}{0.4pt}
+\renewcommand{\footrulewidth}{0pt}
+%
+% 设定章节标记格式
+\renewcommand{\chaptermark}[1]{\markboth{\if@mainmatter\CTEXthechapter\fi\quad #1}{}}
+\renewcommand{\sectionmark}[1]{\markright{\S\thesection\quad #1}}
 %
 % 令 \cleardoublepage 的偶数页页眉页脚为空
 \renewcommand{\cleardoublepage}
